--- a/baxter_grasps_server/grasps/flour_bowl/flour_bowl.yaml
+++ b/baxter_grasps_server/grasps/flour_bowl/flour_bowl.yaml
@@ -5,8 +5,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0315353044808, x: -0.0653639866176, y: 0.993530475894, z: 0.0873514012117}
-      position: {x: 0.0859227711932, y: -0.0496519600462, z: 0.259672564399}
+      orientation: {w: -0.0490117330636, x: -0.0519519984909, y: 0.993737118876, z: 0.0859382245771}
+      position: {x: 0.102686493716, y: -0.0422891119225, z: 0.260769611376}
   grasp_posture:
     header:
       frame_id: ''
@@ -68,8 +68,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.104432518852, x: -0.422801442722, y: 0.887448115302, z: 0.150892782084}
-      position: {x: 0.185243072144, y: -0.0249450434104, z: 0.243908857748}
+      orientation: {w: -0.0270897611465, x: -0.217345870368, y: 0.96781578248, z: 0.123933565496}
+      position: {x: 0.11303178049, y: -0.0621020273679, z: 0.262071851515}
   grasp_posture:
     header:
       frame_id: ''
@@ -131,8 +131,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0586488712922, x: 0.70842673512, y: -0.699818550966, z: -0.0703268553796}
-      position: {x: 0.172126556656, y: 0.0467638467774, z: 0.25550342094}
+      orientation: {w: -0.0609071849669, x: -0.494364626507, y: 0.859351453054, z: 0.115797284131}
+      position: {x: 0.166510878773, y: -0.0226219531664, z: 0.259080469955}
   grasp_posture:
     header:
       frame_id: ''
@@ -194,8 +194,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.053183395927, x: 0.904981763194, y: -0.416797425434, z: -0.0667790448788}
-      position: {x: 0.15374124718, y: 0.0950555345739, z: 0.257027230973}
+      orientation: {w: -0.0578646491829, x: -0.666157974042, y: 0.739027197972, z: 0.0820002234927}
+      position: {x: 0.168279108862, y: 0.0311568265915, z: 0.264068132687}
   grasp_posture:
     header:
       frame_id: ''
@@ -257,8 +257,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0304635508013, x: -0.071310759736, y: 0.992378776765, z: -0.0957659179696}
-      position: {x: 0.0687142465269, y: 0.1482528384, z: 0.263743625325}
+      orientation: {w: -0.0341786153142, x: 0.313973392851, y: 0.94377890437, z: -0.0976417456934}
+      position: {x: 0.130042329504, y: 0.140111091568, z: 0.259615264138}
   grasp_posture:
     header:
       frame_id: ''
@@ -320,8 +320,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.00448615174897, x: -0.374120979341, y: 0.91643192457, z: -0.142006671983}
-      position: {x: 0.00206305917365, y: 0.150611291508, z: 0.257634311839}
+      orientation: {w: -0.0471117796403, x: -0.0856974018211, y: 0.989044813224, z: -0.110574829756}
+      position: {x: 0.0847186286634, y: 0.158523014727, z: 0.259267491555}
   grasp_posture:
     header:
       frame_id: ''
@@ -383,8 +383,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0361588073825, x: -0.67132546177, y: 0.733813228905, z: -0.0976361106942}
-      position: {x: -0.0219676775651, y: 0.0685048432206, z: 0.25575489462}
+      orientation: {w: 0.00911515202809, x: -0.373677686596, y: 0.911154979031, z: -0.173431556331}
+      position: {x: -0.0109455517008, y: 0.155342336501, z: 0.256668805095}
   grasp_posture:
     header:
       frame_id: ''
@@ -446,8 +446,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0496176048127, x: 0.758591111661, y: -0.643386380238, z: 0.0901752977601}
-      position: {x: -0.0455331510053, y: 0.0455596371433, z: 0.266377574237}
+      orientation: {w: 0.106295038729, x: -0.659711721677, y: 0.729492404045, z: -0.146022742968}
+      position: {x: -0.059708714239, y: 0.0709869247741, z: 0.248262913054}
   grasp_posture:
     header:
       frame_id: ''
@@ -462,6 +462,69 @@
       velocities: []
   grasp_quality: 1.0
   id: 7
+  max_contact_force: 0.0
+  post_grasp_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  post_place_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_approach:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: left_gripper
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [0.095]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+- allowed_touch_objects: []
+  grasp_pose:
+    header:
+      frame_id: left_wrist
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    pose:
+      orientation: {w: -0.0688368078772, x: 0.776601258621, y: -0.616501380943, z: 0.109900074092}
+      position: {x: -0.0430054215065, y: 0.018692204541, z: 0.258090561802}
+  grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [-0.0125]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+  grasp_quality: 1.0
+  id: 8
   max_contact_force: 0.0
   post_grasp_retreat:
     desired_distance: 0.1
