--- a/baxter_grasps_server/grasps/mixing_bowl_2/mixing_bowl_2.yaml
+++ b/baxter_grasps_server/grasps/mixing_bowl_2/mixing_bowl_2.yaml
@@ -5,8 +5,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0315353044808, x: -0.0653639866176, y: 0.993530475894, z: 0.0873514012117}
-      position: {x: 0.0859227711932, y: -0.0496519600462, z: 0.259672564399}
+      orientation: {w: -0.0554610107222, x: -0.285281225298, y: 0.955849642046, z: 0.0434759770734}
+      position: {x: 0.106462107362, y: -0.0237400540509, z: 0.29668911775}
   grasp_posture:
     header:
       frame_id: ''
@@ -68,8 +68,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.104432518852, x: -0.422801442722, y: 0.887448115302, z: 0.150892782084}
-      position: {x: 0.185243072144, y: -0.0249450434104, z: 0.243908857748}
+      orientation: {w: -0.0258946024688, x: -0.177779368551, y: 0.982870373889, z: 0.0411071017083}
+      position: {x: 0.0797742029641, y: -0.0400895124991, z: 0.297529822218}
   grasp_posture:
     header:
       frame_id: ''
@@ -131,8 +131,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0586488712922, x: 0.70842673512, y: -0.699818550966, z: -0.0703268553796}
-      position: {x: 0.172126556656, y: 0.0467638467774, z: 0.25550342094}
+      orientation: {w: -0.0290672562532, x: -0.405393273181, y: 0.906471066667, z: 0.11454952627}
+      position: {x: 0.130451871727, y: -0.0608382875133, z: 0.27645328952}
   grasp_posture:
     header:
       frame_id: ''
@@ -194,8 +194,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.053183395927, x: 0.904981763194, y: -0.416797425434, z: -0.0667790448788}
-      position: {x: 0.15374124718, y: 0.0950555345739, z: 0.257027230973}
+      orientation: {w: -0.00903663233754, x: -0.624461316417, y: 0.777729087578, z: 0.0714413739376}
+      position: {x: 0.142807174396, y: 0.00040820715836, z: 0.286869417652}
   grasp_posture:
     header:
       frame_id: ''
@@ -257,8 +257,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0304635508013, x: -0.071310759736, y: 0.992378776765, z: -0.0957659179696}
-      position: {x: 0.0687142465269, y: 0.1482528384, z: 0.263743625325}
+      orientation: {w: -0.0880311901586, x: 0.411184734329, y: 0.891383941739, z: -0.169151684069}
+      position: {x: 0.180309578625, y: 0.156849755636, z: 0.268585513545}
   grasp_posture:
     header:
       frame_id: ''
@@ -320,8 +320,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.00448615174897, x: -0.374120979341, y: 0.91643192457, z: -0.142006671983}
-      position: {x: 0.00206305917365, y: 0.150611291508, z: 0.257634311839}
+      orientation: {w: -0.0434039113463, x: 0.317452868162, y: 0.944800025885, z: -0.0685031974637}
+      position: {x: 0.126371850967, y: 0.139889721299, z: 0.294325248123}
   grasp_posture:
     header:
       frame_id: ''
@@ -383,8 +383,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0361588073825, x: -0.67132546177, y: 0.733813228905, z: -0.0976361106942}
-      position: {x: -0.0219676775651, y: 0.0685048432206, z: 0.25575489462}
+      orientation: {w: -0.0456101113249, x: -0.231408834675, y: 0.96693956714, z: -0.0969409226188}
+      position: {x: 0.0373526595724, y: 0.165337785298, z: 0.291931369313}
   grasp_posture:
     header:
       frame_id: ''
@@ -446,8 +446,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0496176048127, x: 0.758591111661, y: -0.643386380238, z: 0.0901752977601}
-      position: {x: -0.0455331510053, y: 0.0455596371433, z: 0.266377574237}
+      orientation: {w: -0.00834249650438, x: -0.224200944547, y: 0.966533844327, z: -0.124405253048}
+      position: {x: 0.0150064749625, y: 0.174635485587, z: 0.290699347938}
   grasp_posture:
     header:
       frame_id: ''
@@ -462,6 +462,132 @@
       velocities: []
   grasp_quality: 1.0
   id: 7
+  max_contact_force: 0.0
+  post_grasp_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  post_place_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_approach:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: left_gripper
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [0.095]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+- allowed_touch_objects: []
+  grasp_pose:
+    header:
+      frame_id: left_wrist
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    pose:
+      orientation: {w: -0.043618014714, x: 0.793408297917, y: -0.605186698844, z: 0.0484747473561}
+      position: {x: -0.0325392142, y: 0.0278799969447, z: 0.290145525607}
+  grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [-0.0125]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+  grasp_quality: 1.0
+  id: 8
+  max_contact_force: 0.0
+  post_grasp_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  post_place_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_approach:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: left_gripper
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [0.095]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+- allowed_touch_objects: []
+  grasp_pose:
+    header:
+      frame_id: left_wrist
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    pose:
+      orientation: {w: -0.0557471433732, x: 0.936597000197, y: -0.317697293579, z: 0.136918752842}
+      position: {x: -0.0451315778657, y: -0.00490445550923, z: 0.275967558493}
+  grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [-0.0125]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+  grasp_quality: 1.0
+  id: 9
   max_contact_force: 0.0
   post_grasp_retreat:
     desired_distance: 0.1
