--- a/baxter_grasps_server/grasps/white_sugar_bowl/white_sugar_bowl.yaml
+++ b/baxter_grasps_server/grasps/white_sugar_bowl/white_sugar_bowl.yaml
@@ -5,8 +5,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0315353044808, x: -0.0653639866176, y: 0.993530475894, z: 0.0873514012117}
-      position: {x: 0.0859227711932, y: -0.0496519600462, z: 0.259672564399}
+      orientation: {w: 0.00482504081521, x: 0.1133327795, y: 0.981659221953, z: 0.15322392772}
+      position: {x: 0.0384671108876, y: -0.0542801143885, z: 0.247119794811}
   grasp_posture:
     header:
       frame_id: ''
@@ -68,8 +68,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.104432518852, x: -0.422801442722, y: 0.887448115302, z: 0.150892782084}
-      position: {x: 0.185243072144, y: -0.0249450434104, z: 0.243908857748}
+      orientation: {w: -0.0998590193164, x: -0.293623853278, y: 0.938175904389, z: 0.153750386899}
+      position: {x: 0.153643597379, y: -0.0411870905928, z: 0.23754229333}
   grasp_posture:
     header:
       frame_id: ''
@@ -131,8 +131,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0586488712922, x: 0.70842673512, y: -0.699818550966, z: -0.0703268553796}
-      position: {x: 0.172126556656, y: 0.0467638467774, z: 0.25550342094}
+      orientation: {w: -0.013256920541, x: -0.520198603357, y: 0.845272672925, z: 0.121374525869}
+      position: {x: 0.147318379398, y: -0.0129350590448, z: 0.254677982651}
   grasp_posture:
     header:
       frame_id: ''
@@ -194,8 +194,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.053183395927, x: 0.904981763194, y: -0.416797425434, z: -0.0667790448788}
-      position: {x: 0.15374124718, y: 0.0950555345739, z: 0.257027230973}
+      orientation: {w: -0.0557827992855, x: -0.66425559426, y: 0.738634747371, z: 0.100356837204}
+      position: {x: 0.169716605941, y: 0.0332568106983, z: 0.24765840158}
   grasp_posture:
     header:
       frame_id: ''
@@ -257,8 +257,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0304635508013, x: -0.071310759736, y: 0.992378776765, z: -0.0957659179696}
-      position: {x: 0.0687142465269, y: 0.1482528384, z: 0.263743625325}
+      orientation: {w: 0.060764841628, x: 0.767972619605, y: -0.620972803658, z: -0.14463217718}
+      position: {x: 0.183513944202, y: 0.0299106714834, z: 0.248821785528}
   grasp_posture:
     header:
       frame_id: ''
@@ -320,8 +320,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.00448615174897, x: -0.374120979341, y: 0.91643192457, z: -0.142006671983}
-      position: {x: 0.00206305917365, y: 0.150611291508, z: 0.257634311839}
+      orientation: {w: -0.0496880544813, x: 0.383463353035, y: 0.914874401379, z: -0.116154138207}
+      position: {x: 0.153282755802, y: 0.126566335519, z: 0.25035598464}
   grasp_posture:
     header:
       frame_id: ''
@@ -383,8 +383,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: 0.0361588073825, x: -0.67132546177, y: 0.733813228905, z: -0.0976361106942}
-      position: {x: -0.0219676775651, y: 0.0685048432206, z: 0.25575489462}
+      orientation: {w: -0.0952327724838, x: 0.156511373519, y: 0.978270475015, z: -0.0970658885447}
+      position: {x: 0.129920935533, y: 0.145786622833, z: 0.25501897017}
   grasp_posture:
     header:
       frame_id: ''
@@ -446,8 +446,8 @@
       seq: 0
       stamp: {nsecs: 0, secs: 0}
     pose:
-      orientation: {w: -0.0496176048127, x: 0.758591111661, y: -0.643386380238, z: 0.0901752977601}
-      position: {x: -0.0455331510053, y: 0.0455596371433, z: 0.266377574237}
+      orientation: {w: -0.116183313337, x: 0.162833865971, y: 0.971561152767, z: -0.12671028462}
+      position: {x: 0.13354627474, y: 0.166046551861, z: 0.266089657015}
   grasp_posture:
     header:
       frame_id: ''
@@ -462,6 +462,132 @@
       velocities: []
   grasp_quality: 1.0
   id: 7
+  max_contact_force: 0.0
+  post_grasp_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  post_place_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_approach:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: left_gripper
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [0.095]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+- allowed_touch_objects: []
+  grasp_pose:
+    header:
+      frame_id: left_wrist
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    pose:
+      orientation: {w: 0.231469319732, x: -0.661388230464, y: 0.706896319117, z: -0.096359517671}
+      position: {x: -0.0728189560882, y: 0.0293742657837, z: 0.241859616636}
+  grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [-0.0125]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+  grasp_quality: 1.0
+  id: 8
+  max_contact_force: 0.0
+  post_grasp_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  post_place_retreat:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: world
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_approach:
+    desired_distance: 0.1
+    direction:
+      header:
+        frame_id: left_gripper
+        seq: 0
+        stamp: {nsecs: 0, secs: 0}
+      vector: {x: 0.0, y: 0.0, z: 1.0}
+    min_distance: 0.05
+  pre_grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [0.095]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+- allowed_touch_objects: []
+  grasp_pose:
+    header:
+      frame_id: left_wrist
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    pose:
+      orientation: {w: -0.16850356961, x: 0.929852180343, y: -0.31947159394, z: 0.0701382235646}
+      position: {x: -0.00134653689514, y: -0.0387608946012, z: 0.234363227979}
+  grasp_posture:
+    header:
+      frame_id: ''
+      seq: 0
+      stamp: {nsecs: 0, secs: 0}
+    joint_names: [left_gripper_l_finger_joint]
+    points:
+    - accelerations: []
+      effort: []
+      positions: [-0.0125]
+      time_from_start: {nsecs: 0, secs: 0}
+      velocities: []
+  grasp_quality: 1.0
+  id: 9
   max_contact_force: 0.0
   post_grasp_retreat:
     desired_distance: 0.1
